--- a/style.css
+++ b/style.css
@@ -1,15 +1,57 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:300);
+
 body {
 	-webkit-transform: translate3d(0, 0, 0);
+	font-family: Raleway;
+	font-weight: 300;
+	margin:0;
+	color: darkgrey;
+	letter-spacing: .2em;
+}
+header {
+	text-align: center;
+	width: 100%;
+	float: left;
+}
+#header-div {
+	width: 30%;
+	height: 90%;
+	border: 1px solid white;
+	margin: 1% auto;
+	border-radius: 20px;
+	background: rgba(0,0,0,.1);
 }
 section {
 	width: 100%;
-	height: 200px;
+	float: left;
+	position: inline-block;
+	text-align: center;
+}
+section h1 {
+	font-size: 60px;
+}
+p {
+	font-size: 18px;
 }
 .color{
 	width: .39%;
 	height: 100%;
-	/*border: 1px solid black;*/
 	border-radius: 20px;
-	box-sizing: border-box;
 	float: left;
- }
+}
+.copy {
+	text-align: center;
+	font-size: 16px;
+	margin-left: 10px;
+	display: inline-block;
+	cursor: pointer;
+}
+
+.sections {
+	height: 20%;
+}
+.sections p {
+	display: inline-block;
+	margin-top: 0;
+	margin-bottom: 0;
+}
